# monstar

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeMacros.list  CPack.desc  Doxyfile  README.md  README.org  foo.cpp  notes.org
examples/: 0_silly_example.cpp  1_less_silly.cpp  CMakeLists.txt  TaskMonitor.hpp  sandbox.cpp
source/: CMakeLists.txt  Notification.cpp  Notification.hpp  TS_message.cpp  TS_message.hpp  annotations.cpp  epoch.hpp  io_ops.hpp  monstar.cpp  monstar.hpp  notification.cpp  notification.hpp  notification_handler.cpp  notification_handler.hpp  scoped_timer.hpp  simple_recorder.cpp  simple_recorder.hpp
source/detail/: CMakeLists.txt  ES_poster.cpp  ES_poster.hpp  ES_provider.cpp  ES_provider.hpp  MPSC_queue.hpp  TS_generator.cpp  TS_generator.hpp  TS_processor.cpp  TS_processor.hpp  blocking_tcp.hpp  configuration.cpp  configuration.hpp  graphite_poster.hpp  graphite_provider.cpp  graphite_provider.hpp  logging.hpp  tcp_service.cpp  tcp_service.hpp  util.hpp
source/tests/: 0_silly_example.cpp  1_less_silly.cpp  CMakeLists.txt  configuration.cpp  create_test_index.py  integration.cpp  redirector.hpp  test.h  util_tests.cpp
tests/: CMakeLists.txt  sample_monitor.hpp  speed.cpp
